@startuml

class Bug {
	{field} +bugId : Long
	{field} +description : String
	{field} +reportedBy : Long
	{field} +solvedBy : Long
	{field} +taskId : Long
}


class BugController {
	{method} +createBug ( bug : Bug ) : ResponseEntity
	{method} +deleteBug ( id : Long ) : ResponseEntity
	{method} +getAllBugs () : List
	{method} +getBugById ( id : Long ) : ResponseEntity
	{method} +getBugsByTaskId ( taskId : Long ) : List
	{method} +solveBug ( id : Long , body : Map ) : ResponseEntity
	{method} +updateBug ( id : Long , bug : Bug ) : ResponseEntity
}


interface BugRepository {
	{method}  {abstract} +findByReportedBy ( reportedBy : Long ) : List
	{method}  {abstract} +findBySolvedByIsNotNull () : List
	{method}  {abstract} +findBySolvedByIsNull () : List
	{method}  {abstract} +findByTaskId ( taskId : Long ) : List
}


class BugService {
	{method} +addBug ( bug : Bug ) : Bug
	{method} +deleteBug ( id : Long ) : void
	{method} +findAll () : List
	{method} +findByReportedBy ( reportedBy : Long ) : List
	{method} +findByTaskId ( taskId : Long ) : List
	{method} +getBugById ( id : Long ) : ResponseEntity
	{method} +updateBug ( id : Long , bugDetails : Bug ) : Bug
}


class KpiExplanation {
	{field} -description : String
	{field} -formula : String
	{field} -key : String
	{field} -label : String
}


class MatchedPattern {
	{field} -confidence : double
	{field} -matchedExample : String
}


class MemberProductivityRank {
	{field} -assignedTasks : int
	{field} -completedTasks : int
	{field} -completionPct : int
	{field} -explanation : String
	{field} -name : String
	{field} -onEstimatePct : int
	{field} -oracleId : Long
	{field} -productivityScore : int
	{field} -rank : int
	{field} -signal : String
	{field} -varianceHours : double
}


class MemberProductivitySummary {
	{field} -actualHours : double
	{field} -assignedTasks : int
	{field} -bugsReported : int
	{field} -bugsSolved : int
	{field} -completionPct : int
	{field} -doneTasks : int
	{field} -estimatedHours : double
	{field} -name : String
	{field} -onEstimatePct : int
	{field} -oracleId : Long
	{field} -summary : String
	{field} -varianceHours : double
	{field} -workloadSharePct : int
}


class ProductivityInsight {
	{field} -confidence : double
	{field} -description : String
	{field} -matchedPattern : String
	{field} -recommendation : String
	{field} -severity : String
	{field} -title : String
	{field} -type : String
}


class ProductivityPattern {
	{field} -description : String
	{field} -examples : List
	{field} -key : String
	{field} -recommendation : String
	{field} -severity : String
	{field} -title : String
}


class ProductivityPatternMatcher {
	{field} -embeddingService : IntentEmbeddingService
	{method} -buildPatterns () : List
	{method} -cosine ( left : float[] , right : float[] ) : double
	{method} +match ( observation : String ) : MatchedPattern
}


class ProductivityReport {
	{field} -embeddingMode : String
	{field} -generatedAt : OffsetDateTime
}


class ProductivityReportController {
	{method} +getReport ( sprintId : String ) : ProductivityReport
}


class ProductivityReportService {
	{field} -hourlyRateUsd : double
	{field} -userService : UserService
	{method} -buildMemberRanking ( members : List ) : List
	{method} -buildMembers ( developers : List , tasks : List , assignees : List , bugs : List ) : List
	{method} -buildPatternInsights ( team : TeamProductivitySummary , members : List ) : List
	{method} +buildReport ( sprintId : String ) : ProductivityReport
	{method} -buildSavings ( team : TeamProductivitySummary , tasks : List , bugs : List ) : SavingsEstimate
	{method} -buildTeamSummary ( sprintId : String , tasks : List , assignees : List , bugs : List ) : TeamProductivitySummary
	{method} -clamp ( value : int , min : int , max : int ) : int
	{method} -kpiExplanations () : List
	{method} -memberObservation ( member : MemberProductivitySummary ) : String
	{method} -memberProductivityScore ( member : MemberProductivitySummary , match : MatchedPattern ) : int
	{method} -memberRankingExplanation ( member : MemberProductivitySummary , signal : String ) : String
	{method} -memberSummary ( assigned : int , done : int , variance : double , workloadSharePct : int ) : String
	{method} -pct ( part : int , total : int ) : int
	{method} -round1 ( value : double ) : double
	{method} -round2 ( value : double ) : double
	{method} -scopeLabel ( sprintId : String ) : String
	{method} -selectedTasks ( sprintId : String ) : List
	{method} -value ( value : Double ) : double
}


class SavingsEstimate {
	{field} -estimatedHoursSaved : double
	{field} -estimatedMoneySaved : double
	{field} -explanation : String
	{field} -hourlyRateUsd : double
}


class Sprint {
	{field} +endDate : LocalDate
	{field} +goal : String
	{field} +sprintDuration : Integer
	{field} +sprintId : Long
	{field} +sprintName : String
	{field} +startDate : LocalDate
	{field} +status : String
	{method} #calculateDuration () : void
}


class SprintController {
	{field} -authUserService : AuthUserService
	{method} +createSprint ( sprint : Sprint , authentication : Authentication ) : ResponseEntity
	{method} +deleteSprint ( id : Long , authentication : Authentication ) : ResponseEntity
	{method} +getAllSprints () : List
	{method} +getByStatus ( status : String ) : List
	{method} +getSprintById ( id : Long ) : ResponseEntity
	{method} +updateSprint ( id : Long , sprint : Sprint , authentication : Authentication ) : ResponseEntity
}


interface SprintRepository {
	{method}  {abstract} +findBySprintNameIgnoreCase ( sprintName : String ) : Optional
	{method}  {abstract} +findByStatus ( status : String ) : List
}


class SprintService {
	{method} +createSprint ( sprint : Sprint ) : Sprint
	{method} +deleteSprint ( id : Long ) : boolean
	{method} +findAll () : List
	{method} +findBySprintName ( sprintName : String ) : Optional
	{method} +findBySprintNumber ( sprintNumber : Long ) : Optional
	{method} +findByStatus ( status : String ) : List
	{method} +getSprintById ( id : Long ) : ResponseEntity
	{method} +updateSprint ( id : Long , updated : Sprint ) : Sprint
}


class Task {
	{field} +category : String
	{field} +createdAt : OffsetDateTime
	{field} +createdBy : Long
	{field} +description : String
	{field} +dueDate : LocalDate
	{field} +sprintId : Long
	{field} +status : String
	{field} +storyPoints : Integer
	{field} +taskId : Long
	{field} +taskName : String
	{field} +updatedAt : OffsetDateTime
}


class TaskAssignee {
	{field} +additionalComments : String
	{field} +estimatedCompletionTime : Double
	{field} +oracleId : Long
	{field} +realTimeSpent : Double
	{field} +taskId : Long
}


class TaskAssigneeId {
	{field} -oracleId : Long
	{field} -taskId : Long
	{method} +equals ( o : Object ) : boolean
	{method} +hashCode () : int
}


interface TaskAssigneeRepository {
	{method}  {abstract} +findByOracleId ( oracleId : Long ) : List
	{method}  {abstract} +findByTaskId ( taskId : Long ) : List
}


class TaskCompletionRequest {
	{field} +oracleId : Long
	{field} +realTimeSpent : Double
}


class TaskController {
	{field} -authUserService : AuthUserService
	{method} +assignTask ( assignee : TaskAssignee , authentication : Authentication ) : ResponseEntity
	{method} +completeTask ( id : Long , body : TaskCompletionRequest ) : ResponseEntity
	{method} +createTask ( task : Task , authentication : Authentication ) : ResponseEntity
	{method} +deleteTask ( id : Long , authentication : Authentication ) : ResponseEntity
	{method} +getAllAssignees () : List
	{method} +getAllTasks () : List
	{method} +getAssignees ( id : Long ) : List
	{method} +getTaskById ( id : Long ) : ResponseEntity
	{method} +getTasksBySprint ( sprintId : Long ) : List
	{method} -isAssignedToTask ( taskId : Long , oracleId : Long ) : boolean
	{method} +removeAssignee ( taskId : Long , oracleId : Long , authentication : Authentication ) : ResponseEntity
	{method} +updateHours ( taskId : Long , oracleId : Long , body : Map ) : ResponseEntity
	{method} +updateTask ( id : Long , task : Task , authentication : Authentication ) : ResponseEntity
}


interface TaskRepository {
	{method}  {abstract} +findByCreatedBy ( createdBy : Long ) : List
	{method}  {abstract} +findBySprintId ( sprintId : Long ) : List
}


class TaskService {
	{method} +addTask ( task : Task ) : Task
	{method} +assignTask ( assignee : TaskAssignee ) : TaskAssignee
	{method} +completeTask ( taskId : Long , oracleId : Long , realTimeSpent : Double ) : Task
	{method} +deleteTask ( id : Long ) : boolean
	{method} +findAll () : List
	{method} +findBySprintId ( sprintId : Long ) : List
	{method} +getAllAssignees () : List
	{method} +getAssigneesByTaskId ( taskId : Long ) : List
	{method} +getTaskById ( id : Long ) : ResponseEntity
	{method} +removeAssignee ( taskId : Long , oracleId : Long ) : void
	{method} +updateAssigneeHours ( taskId : Long , oracleId : Long , realTimeSpent : Double , estimatedCompletionTime : Double ) : TaskAssignee
	{method} +updateTask ( id : Long , updated : Task ) : Task
	{method} +updateTaskStatus ( id : Long , status : String ) : Task
}


class TeamProductivitySummary {
	{field} -blockedTasks : int
	{field} -bugResolvePct : int
	{field} -bugsCreated : int
	{field} -bugsOpen : int
	{field} -bugsResolved : int
	{field} -doneTasks : int
	{field} -estimateDeltaHours : double
	{field} -inProgressTasks : int
	{field} -onEstimatePct : int
	{field} -progressPct : int
	{field} -scopeLabel : String
	{field} -teamProductivityScore : int
	{field} -totalActualHours : double
	{field} -totalEstimatedHours : double
	{field} -totalTasks : int
}


interface ToDoItemRepository {
}


interface UserRepository {
	{method}  {abstract} +findByMail ( mail : String ) : Optional
	{method}  {abstract} +findByMailIgnoreCase ( mail : String ) : Optional
	{method}  {abstract} +findByRole ( role : String ) : List
}




BugController -->  BugService : bugService
BugService -->  BugRepository : bugRepository
MatchedPattern *--  ProductivityPattern : pattern
ProductivityPatternMatcher "1" o-- "0..*"  ProductivityPattern : patterns
ProductivityReport "1" o-- "0..*"  KpiExplanation : kpiExplanations
ProductivityReport "1" o-- "0..*"  MemberProductivityRank : memberRanking
ProductivityReport "1" o-- "0..*"  MemberProductivitySummary : members
ProductivityReport "1" o-- "0..*"  ProductivityInsight : patterns
ProductivityReport "1" o-- "0..*"  ProductivityInsight : recommendations
ProductivityReport *--  SavingsEstimate : savingsEstimate
ProductivityReport *--  TeamProductivitySummary : teamSummary
ProductivityReportController *--  ProductivityReportService : productivityReportService
ProductivityReportService *--  BugService : bugService
ProductivityReportService *--  ProductivityPatternMatcher : patternMatcher
ProductivityReportService *--  SprintService : sprintService
ProductivityReportService *--  TaskService : taskService
SprintController -->  SprintService : sprintService
SprintService -->  SprintRepository : sprintRepository
TaskController -->  TaskService : taskService
TaskService -->  TaskAssigneeRepository : taskAssigneeRepository
TaskService -->  TaskRepository : taskRepository


@enduml